# discword-bot

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
tests/: test_wordle-bot-project.py
wordlebot/: bot.py  commands.py  game.py  player_info.py  utilities.py
